# gpu-parallel-fft

./: Readme.md  meson.build
benchmarks/: bench.cu  meson.build
include/: meson.build
include/gpfft/: fft_type.hpp  gpfft.hpp  meson.build  mpi_handler.hpp  parallel_buffer.hpp
include/gpfft/detail/: cufft_wrapper.hpp  fftw_wrapper.hpp  meson.build  mpi_handler.hpp  parallel_buffer.hpp  parallel_buffer_impl.hpp
tests/: 1d-fftw.cpp  1d-fftw.cu  3d-fftw.cpp  3d-fftw.cu  meson.build  sum.cpp  transpose.cpp
